Remove an unnecessary arrow from the lock screen notification center.

The arrow was shown in the the lock screen notification center,
but it should not be shown as it is no-op here.
This implementation removes the arrow.

TEST=ash_unittests
BUG=797861

Change-Id: Idf9db7bdb284cc2979e1fc3166d2be20ca8bdbee
Reviewed-on: https://chromium-review.googlesource.com/867790
Reviewed-by: Yoshiki Iguchi <yoshiki@chromium.org>
Reviewed-by: Tetsui Ohkubo <tetsui@chromium.org>
Commit-Queue: Megumi Hattori <megumihattori@google.com>
Cr-Commit-Position: refs/heads/master@{#530808}